<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item android:id="@+id/all_wallpaper"-->
          <!--android:title="@string/all_wallpaper"/>-->

    <!--<item android:id="@+id/category"-->
          <!--android:title="@string/category"/>-->

    <item android:id="@+id/rate_us"
          android:icon="@drawable/ic_stars_black_24dp"
          android:title="@string/rate_us"/>

    <item android:id="@+id/privacy_policy"
          android:icon="@drawable/ic_lock_outline_black_24dp"
          android:title="@string/privacy_policy"/>

    <item android:id="@+id/about_us"
          android:icon="@drawable/ic_group_work_black_24dp"
          android:title="@string/about_us"/>

    <item android:id="@+id/share"
          android:icon="@drawable/ic_menu_share"
          android:title="@string/share"/>
</menu>