<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutActivity">

    <androidx.appcompat.widget.Toolbar
            android:id                              ="@+id/my_toolbar"
            android:layout_width                    ="match_parent"
            android:layout_height                   ="?attr/actionBarSize"
            android:background                      ="?attr/colorPrimary"
            android:elevation                       ="4dp"
            android:theme                           ="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme                          ="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintStart_toStartOf    ="parent"
            app:layout_constraintTop_toTopOf        ="parent"/>

    <LinearLayout
            android:id="@+id/appName"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/my_toolbar"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:text="@string/app_name_txt"
                android:textSize="18sp"
                android:paddingTop="11dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <TextView
                android:text="@string/app_name"
                android:paddingTop="9dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <View
                android:background="#D6D2D2"
                android:layout_marginTop="11dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/version"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/appName"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:text="@string/version"
                android:textSize="18sp"
                android:paddingTop="11dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <TextView
                android:id="@+id/versionTxt"
                android:paddingTop="9dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <View
                android:background="#D6D2D2"
                android:layout_marginTop="11dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/developer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/version"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:text="@string/developer"
                android:textSize="18sp"
                android:paddingTop="11dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <TextView
                android:text="@string/developer_text"
                android:paddingTop="9dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <View
                android:background="#D6D2D2"
                android:layout_marginTop="11dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/email"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/developer"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:text="@string/email"
                android:textSize="18sp"
                android:paddingTop="11dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <TextView
                android:text="@string/email_text"
                android:paddingTop="9dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <View
                android:background="#D6D2D2"
                android:layout_marginTop="11dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
            xmlns:ads                               ="http://schemas.android.com/apk/res-auto"
            android:id                              ="@+id/adView"
            android:layout_width                    ="match_parent"
            android:layout_height                   ="wrap_content"
            android:layout_centerHorizontal         ="true"
            android:layout_alignParentBottom        ="true"
            ads:adSize                              ="BANNER"
            ads:adUnitId                            ="ca-app-pub-3940256099942544/6300978111"
            ads:layout_constraintStart_toStartOf    ="parent"
            ads:layout_constraintEnd_toEndOf        ="parent"
            ads:layout_constraintBottom_toBottomOf  ="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>